create dpt-admin component to separate login component

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,5 @@
-<div class="wrapper">
+<router-outlet></router-outlet>
+<!-- <div class="wrapper">
     <div class="sidebar" data-background-color="white" data-active-color="danger">
         <sidebar-cmp></sidebar-cmp>
     </div>
@@ -9,7 +10,7 @@
         </div>
         <footer-cmp></footer-cmp>
     </div>
-</div>
+</div> -->
 
 <!-- <router-outlet name="off-wrapper"></router-outlet> -->
 <!-- <fixedplugin-cmp></fixedplugin-cmp> -->
