--- a/src/app/items/items.component.html
+++ b/src/app/items/items.component.html
@@ -1,3 +1,112 @@
-<p>
-  items works!
-</p>
+<div class="container-fluid">
+  <div class="row">
+    <div class="col-lg-4 col-sm-6">
+      <div class="card">
+        <div class="content">
+          <div class="row">
+            <div class="col-xs-5">
+              <div class="icon-big icon-warning text-center">
+                <i class="ti-gallery"></i>
+              </div>
+            </div>
+            <div class="col-xs-7">
+              <div class="numbers">
+                <p>Produtos</p>
+                89
+              </div>
+            </div>
+          </div>
+          <div class="footer">
+            <hr />
+            <div class="stats">
+              <i class="ti-reload"></i> Cadastrados
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="col-lg-4 col-sm-6">
+      <a href="#">
+        <div class="card">
+          <div class="content">
+            <div class="row">
+              <div class="col-xs-5">
+                <div class="icon-big icon-success text-center">
+                  <i class="fa fa-list"></i>
+                </div>
+              </div>
+              <div class="col-xs-7">
+                <div class="numbers">
+                  <p>Categorias</p>
+                  2
+                </div>
+              </div>
+            </div>
+            <div class="footer">
+              <hr />
+              <div class="stats">
+                <i class="ti-reload"></i> Gerenciar categorias
+              </div>
+            </div>
+          </div>
+        </div>
+      </a>
+    </div>
+    <div class="col-lg-4 col-sm-6">
+      <a href="#">
+        <div class="card">
+          <div class="content">
+            <div class="row">
+              <div class="col-xs-5">
+                <div class="icon-big icon-danger text-center">
+                  <i class="fa fa-level-down"></i>
+                </div>
+              </div>
+              <div class="col-xs-7">
+                <div class="numbers">
+                  <p>Sem estoque</p>
+                  2
+                </div>
+              </div>
+            </div>
+            <div class="footer">
+              <hr />
+              <div class="stats">
+                <i class="fa fa-search"></i> Visualizar
+              </div>
+            </div>
+          </div>
+        </div>
+      </a>
+    </div>
+  </div>
+  <div class="row">
+
+    <div class="col-md-12">
+      <div class="card">
+        <div class="header">
+          <h4 class="title">Listagem de Itens Cadastrados</h4>
+          <p class="category">218 itens</p>
+        </div>
+        <div class="content">
+            <table class="table" datatable [dtOptions]="dtOptions" [dtTrigger]="dtTrigger">
+                <thead>
+                  <tr>
+                    <th>ID</th>
+                    <th>Item</th>
+                    <th>Preço</th>
+                  </tr>
+                </thead>
+                <tbody>
+                  <tr *ngFor="let item of items">
+                    <td>{{ item.id }}</td>
+                    <td>{{ item.label }}</td>
+                    <td>{{ item.price }}</td>
+                  </tr>
+                </tbody>
+                </table>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
