--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -18,7 +18,7 @@
                                     </div>
                                     <div class="form-group">
                                         <label>Senha</label>
-                                        <input class="form-control input-no-border" [(ngModel)]="user.pass" name="pass" placeholder="Senha" required type="password">
+                                        <input class="form-control input-no-border" [(ngModel)]="user.password" name="pass" placeholder="Senha" required type="password">
                                     </div>
                                 </div>
                                 <div class="card-footer text-center">
