--- a/src/app/clients/list-client/list-client.component.html
+++ b/src/app/clients/list-client/list-client.component.html
@@ -1,37 +1,41 @@
 <div class="header">
-    <h4 class="title">Listagem de Itens Cadastrados
+    <h4 class="title">Clientes Cadastrados
         <a routerLink="create" class="btn btn-success pull-right">
             <i class="fa fa-plus"></i> Novo
         </a>
     </h4>
-    <p class="category">218 itens</p>
+    <p class="category">{{ clients.length }} clientes cadastrados </p>
 </div>
 <div class="content">
     <table class="table table-hover" datatable [dtOptions]="dtOptions" [dtTrigger]="dtTrigger">
         <thead>
             <tr>
                 <th>ID</th>
-                <th>Item</th>
-                <th>Preço</th>
+                <th>Nome</th>
+                <th>CPF</th>
+                <th>E-mail</th>
+                <th>Telefone</th>
                 <th>Ações</th>
             </tr>
         </thead>
         <tbody>
-            <tr *ngFor="let item of items">
-                <td>{{ item.id }}</td>
-                <td>{{ item.label }}</td>
-                <td>{{ item.price }}</td>
+            <tr *ngFor="let c of clients">
+                <td>{{ c.id }}</td>
+                <td>{{ c.name }}</td>
+                <td>{{ c.cpf }}</td>
+                <td>{{ c.email }}</td>
+                <td>{{ c.phone }}</td>
                 <td>
-                    <a [routerLink]="['update', item.id]" title="Editar" class="btn btn-primary">
+                    <a  title="Editar" class="btn btn-primary">
                         <i class="fa fa-edit"></i>
                     </a>
-                    <a [routerLink]="['images', item.id]" title="Fotos" class="btn btn-primary">
+                    <a  title="Fotos" class="btn btn-primary">
                         <i class="fa fa-camera"></i>
                     </a>
-                    <a [routerLink]="['sizes', item.id]" title="Tamanhos" class="btn btn-primary">
+                    <a  title="Tamanhos" class="btn btn-primary">
                         <i class="ti-ruler-alt-2"></i>
                     </a>
-                    <a (click)="openModal(template, item.id)" title="Excluir" class="btn btn-danger">
+                    <a (click)="openModal(template, c, 'sm')" title="Excluir" class="btn btn-danger">
                         <i class="fa fa-trash"></i>
                     </a>
                 </td>
@@ -42,7 +46,7 @@
 
 <ng-template #template>
     <div class="modal-body text-center">
-        <p>Deseja mesmo excluir o item?</p>
+        <p>Deseja mesmo excluir o cliente "{{ refId.name }}"?</p>
         <button type="button" class="btn btn-danger" (click)="confirmDelete()">Sim</button>
         <button type="button" class="btn btn-primary" (click)="modalRef.hide()">Não</button>
     </div>
