--- a/src/app/orders/list-orders/list-orders.component.html
+++ b/src/app/orders/list-orders/list-orders.component.html
@@ -27,8 +27,8 @@
                 <td>{{ c.created_at | date: 'dd/MM/yy' }}</td>
                 <td>{{ c.status }}</td>
                 <td>
-                    <a [routerLink]="['view', c.id]" title="Editar" class="btn btn-primary">
-                        <i class="fa fa-edit"></i>
+                    <a [routerLink]="['view', c.id]" title="Visualizar" class="btn btn-primary">
+                        <i class="fa fa-search"></i>
                     </a>
                     <a (click)="openModal(template, c, 'sm')" title="Excluir" class="btn btn-danger">
                         <i class="fa fa-trash"></i>
