users and orders manager

--- a/src/app/orders/view-order/view-order.component.html
+++ b/src/app/orders/view-order/view-order.component.html
@@ -127,4 +127,10 @@
             </div>
         </div>
     </div>
+
+    <div class="row">
+        <div class="col-md-12 text-center">
+            <a class="btn btn-default" routerLink="../../"> Voltar </a>
+        </div>
+    </div>
 </div>
