--- a/src/app/shared/footer/footer.component.html
+++ b/src/app/shared/footer/footer.component.html
@@ -5,7 +5,7 @@
 
                 <li>
                     <a href="http://damiipratii.com.br" target="_blank">
-                        Visitar Site
+                        Visite nosso site
                     </a>
                 </li>
             </ul>
