solve css bugs + component banners

--- a/src/app/front-store/front-store.component.html
+++ b/src/app/front-store/front-store.component.html
@@ -29,7 +29,7 @@
                             <div class="block block-minicart">
                                 <div class="minicart-content-wrapper">
                                     <div class="block-title">
-                                        <span>Recently added item(s)</span>
+                                        <span>Itens na cesta:</span>
                                     </div>
                                     <a class="btn-minicart-close" title="Close">&#10060;</a>
                                     <div class="block-content">
@@ -183,12 +183,12 @@
                                         <div class="actions">
                                             <div class="secondary">
                                                 <a href="cart.html" class="btn btn-alt">
-                                                    <i class="icon icon-cart"></i><span>View and edit cart</span>
+                                                    <i class="icon icon-cart"></i><span>ver minha cesta</span>
                                                 </a>
                                             </div>
                                             <div class="primary">
                                                 <a class="btn" href="checkout.html">
-                                                    <i class="icon icon-external-link"></i><span>Go to Checkout</span>
+                                                    <i class="icon icon-external-link"></i><span>finalizar pedido</span>
                                                 </a>
                                             </div>
                                         </div>
@@ -206,17 +206,17 @@
                         <div class="header-link dropdown-link header-account">
                             <a href="index.html#"><i class="icon icon-user"></i></a>
                             <div class="dropdown-container right">
-                                <div class="title">Registered Customers</div>
-                                <div class="top-text">If you have an account with us, please log in.</div>
+                                <div class="title">Usuário registrado</div>
+                                <div class="top-text">Se você já tem uma conta, basta fazer seu login.</div>
                                 <!-- form -->
                                 <form action="index.html#">
                                     <input type="text" class="form-control" placeholder="E-mail*">
                                     <input type="text" class="form-control" placeholder="Password*">
-                                    <button type="submit" class="btn">Sign in</button>
+                                    <button type="submit" class="btn">Entrar</button>
                                 </form>
                                 <!-- /form -->
-                                <div class="title">OR</div>
-                                <div class="bottom-text">Create a <a href="account-create.html">New Account</a></div>
+                                <div class="title">OU</div>
+                                <div class="bottom-text">Crie uma <a href="account-create.html">Nova Conta</a></div>
                             </div>
                         </div>
                         <!-- /Header Account -->
@@ -303,34 +303,12 @@
                                     <!-- _blank or _self ( _self is default )-->
                                     <div class="wrapper">
                                         <figure><img src="../../assets/seiko/images/slider/slide-02.jpg" alt=""></figure>
-                                        <div class="text2-1 animate" data-animate="flipInY" data-delay="0"> Seikō </div>
-                                        <div class="text2-2 animate" data-animate="bounceIn" data-delay="500"> Season sale </div>
-                                        <div class="text2-3 animate" data-animate="bounceIn" data-delay="1000"> popular brands </div>
-                                        <div class="text2-4 animate" data-animate="rubberBand" data-delay="1500"> 70% </div>
-                                        <div class="text2-5 animate" data-animate="hinge" data-delay="2000"> OFF </div>
                                     </div>
                                 </div>
 
                                 <div class="swiper-slide" data-thumb="../../assets/seiko/images/slider/slide-01-thumb.png">
                                     <div class="wrapper">
                                         <figure><img src="../../assets/seiko/images/slider/slide-01.jpg" alt=""></figure>
-                                        <div class="caption animate" data-animate="fadeIn">
-                                            <div class="text1 animate" data-animate="flipInY" data-delay="0"> Seikō </div>
-                                            <div class="text2 animate" data-animate="bounceInLeft" data-delay="500"> <strong>New</strong> collection </div>
-                                            <div class="text3 animate" data-animate="bounceInLeft" data-delay="1500"> WOMEN'S <strong>FASHION</strong> </div>
-                                            <div class="animate" data-animate="fadeIn" data-delay="2000">
-                                                <!-- coolbutton -->
-                                                <a href="index.html#" class="cool-btn" style="-webkit-clip-path: url(index.html); clip-path: url(index.html);"> <span>MORE</span> </a>
-                                                <svg class="clip-svg">
-                          <defs>
-                            <clipPath id="coolButton" clipPathUnits="objectBoundingBox">
-                              <polygon points="0 .18, .99 .15, .91 .85, .07 .8" />
-                            </clipPath>
-                          </defs>
-                        </svg>
-                                                <!-- // coolbutton -->
-                                            </div>
-                                        </div>
                                     </div>
                                 </div>
                             </div>
@@ -390,9 +368,9 @@
             <div class="block">
                 <div class="container">
                     <ul class="filters filters-product style2">
-                        <li><a href="index.html#" class="filter-label">All<span class="count"></span></a></li>
-                        <li><a href="index.html#" class="filter-label active" data-filter=".category1">New<span class="count"></span></a></li>
-                        <li><a href="index.html#" class="filter-label" data-filter=".category2">Sale<span class="count"></span></a></li>
+                        <li><a href="index.html#" class="filter-label">Todos<span class="count"></span></a></li>
+                        <li><a href="index.html#" class="filter-label active" data-filter=".category1">Curtos<span class="count"></span></a></li>
+                        <li><a href="index.html#" class="filter-label" data-filter=".category2">Longos<span class="count"></span></a></li>
                     </ul>
                     <div class="products-grid-wrapper isotope-wrapper">
                         <div class="products-grid isotope four-in-row product-variant-5">
@@ -984,46 +962,6 @@
         <!-- /Page Content -->
         <!-- Footer -->
         <footer class="page-footer variant4 fullboxed">
-            <div class="footer-top bg">
-                <div class="container">
-                    <div class="row">
-                        <div class="col-md-6">
-                            <!-- newsletter -->
-                            <div class="newsletter variant3">
-                                <div class="footer-logo">
-                                    <a href="index.html#">
-                                            damiipratii
-                                        </a>
-                                </div>
-                                <div>
-                                    <!-- input-group -->
-                                    <form action="index.html#">
-                                        <div class="input-group">
-                                            <input type="text" class="form-control">
-                                            <span class="input-group-btn">
-                        <button class="btn btn-default" type="submit"><i class="icon icon-close-envelope"></i></button>
-                        </span>
-                                        </div>
-                                    </form>
-                                    <!-- /input-group -->
-                                </div>
-                            </div>
-                            <!-- /newsletter -->
-                        </div>
-                        <div class="col-md-3">
-                            <h3><span class="custom-color">HOT</span> Company news </h3>
-                            <div class="news-item">
-                                <div class="news-date">21.10.06</div>
-                                <h4 class="news-title">Neque porro quisquam est</h4>
-                                <div class="news-text">
-                                    <p>Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut git, sed quia consequuntur magni dolore</p>
-                                    <p><a href="index.html#" class="readmore">Read more</a></p>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
             <div class="footer-middle">
                 <div class="container">
                     <div class="row">
